--- a/frontend/app.json
+++ b/frontend/app.json
@@ -5,6 +5,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "light",
+    "extra": {
+      "apiUrl": "http://localhost:4311/api"
+    },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.neurolock.app",
