--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "class-variance-authority": "^0.7.1",
     "expo": "^54.0.23",
     "expo-asset": "~12.0.9",
     "expo-linear-gradient": "^15.0.7",
     "expo-local-authentication": "~17.0.7",
     "expo-status-bar": "~3.0.8",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.554.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
