Add patient edit with auth, assessment scheduling with date picker, and therapy notes improvements

--- a/neurolock-staff-backend/tsconfig.json
+++ b/neurolock-staff-backend/tsconfig.json
@@ -7,12 +7,12 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "baseUrl": "./src",
     "paths": {
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "scripts/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
