--- a/backend/sql-dbms-bundle/sql-dbms/docker-compose.yml
+++ b/backend/sql-dbms-bundle/sql-dbms/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_ROOT_PASSWORD: root123
       MYSQL_DATABASE: neurolock
       MYSQL_USER: app
-      MYSQL_PASSWORD: app123
+      MYSQL_PASSWORD: NeuroLock@2025
     ports:
       - "3307:3306"
     volumes:
