--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
+    "class-variance-authority": "^0.7.1",
     "expo": "~54.0.25",
     "expo-asset": "~12.0.10",
     "expo-linear-gradient": "^15.0.7",
